--- a/css/estilo.css
+++ b/css/estilo.css
@@ -22,6 +22,38 @@ body {
     padding: 10px;
 }
 
+#area-principal {
+    width: 920px;
+    margin: 0 auto;
+    padding: 15px;
+}
+
+#area-postagens, #area-lateral {
+    background: orange;
+}
+
+#area-postagens {
+    width: 660px;
+    float: left
+}
+
+#area-lateral {
+    width: 240px;
+    float: right;
+}
+
+.postagem {
+    padding: 20px;
+    margin-bottom: 20px;
+    background: white;
+}
+
+#rodape {
+    clear: both;
+    text-align: center;
+    padding: 15px;
+    background: #CCC;
+}
 /* FORMATAÇÃO DO MENU */
 
 a {
@@ -45,6 +77,18 @@ h1 {
     font-size: 2.5em;
 }
 
+h2 {
+    color: #f7b600;
+}
+
 .mudar {
     color: white;
+}
+
+.data-postagem {
+    font-size: 0.8em;
+    border-bottom: 1px solid #f4f4f4;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    display: block;
 }
