--- a/css/estilo.css
+++ b/css/estilo.css
@@ -28,10 +28,6 @@ body {
     padding: 15px;
 }
 
-#area-postagens, #area-lateral {
-    background: orange;
-}
-
 #area-postagens {
     width: 660px;
     float: left
@@ -48,6 +44,18 @@ body {
     background: white;
 }
 
+.conteudo-lateral {
+    background: white;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.postagem-lateral {
+    font-size: 0.8em;
+    padding: 5px;
+    border-bottom: 1px dotted #CCC;
+}
+
 #rodape {
     clear: both;
     text-align: center;
@@ -61,13 +69,22 @@ a {
 }
 
 a:link, a:visited {
+    color: #f7b600;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+#area-cabecalho a:link, #area-cabecalho a:visited {
     color: #FFF;
     padding: 8px 12px;
 }
 
-a:hover {
+#area-cabecalho a:hover {
     color: #f7b600;
     background: #FFF;
+    text-decoration: none;
 }
 
 /* FORMATAÇÕES EM GERAL */
@@ -79,6 +96,12 @@ h1 {
 
 h2 {
     color: #f7b600;
+}
+
+h3 {
+    color: #565656;
+    background: #CCC;
+    padding: 5px;
 }
 
 .mudar {
